Added main menu w/ go back btn

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,12 +2,40 @@ html {
     font-family: 'Courier New', Courier, monospace;
     background-color: #1a1c1e;
     color: white;
+    text-align: center;
+    height: 100%;
 }
 
-/* Header */
-nav a {
-    color: white;
+body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+/* Header */
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+#go-back-btn {
+    display: none;
+    width: 100px;
+}
+
 
 /* Main*/
 
@@ -15,5 +43,5 @@ main div {
     border-radius: 25px;
     background-color: rgba(60, 60, 60, .5);
     margin: 20px;
-    padding: 20px 35px;
+    padding: 10px 35px 20px 35px;
 }
