--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,64 @@ ul {
     padding: 0;
 }
 
+button {
+    display: inline-block;
+    background-color: #333333;
+    width: 325px;
+    height: 50px;
+    color: white;
+    border-radius: 7px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 2px;
+    border: none;
+    transition-duration: all .3s;
+}
+
+button span {
+    position: relative;
+    transition: .3s;
+}
+
+button span:after {
+    content:"\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: .3s;
+}
+
+button:hover span {
+    padding-right: 25px;
+}
+
+button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+button:hover {
+    background-color: #444444;
+}
+
+#go-back-btn span:after {
+    content:"\00ab";
+    left: -80px;
+    right: 0;
+}
+
+#go-back-btn:hover span {
+    padding-left: 25px;
+    padding-right: 0;
+}
+
+#go-back-btn:hover span:after {
+    left: 0;
+    right: 90px;
+}
+
 
 /* Header */
 
@@ -33,7 +91,7 @@ header {
 
 #go-back-btn {
     display: none;
-    width: 100px;
+    width: 150px;
 }
 
 
