--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,12 @@ body {
     height: 100%;
 }
 
+canvas {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 
 /* Header */
 
@@ -22,6 +28,7 @@ header {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    z-index: 1;
 }
 
 h1 {
@@ -36,6 +43,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 ul {
