--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
+    margin: 0;
 }
 
 canvas {
@@ -25,6 +26,7 @@ canvas {
 
 
 h1 {
+    margin-top: 0;
     margin-bottom: 20px;
 }
 
@@ -37,6 +39,7 @@ main {
     justify-content: center;
     align-items: center;
     z-index: 1;
+    max-height: 65%;
 }
 
 ul {
@@ -96,8 +99,10 @@ button:active {
 div {
     border-radius: 25px;
     background-color: rgba(60, 60, 60, .8);
-    padding: 10px 35px 20px 35px;
+    padding: 5px 35px 20px 35px;
     width: 75%;
+    height: 100%;
+    overflow: scroll;
 }
 
 div li {
@@ -121,7 +126,7 @@ h2 {
 #go-back-btn {
     display: none;
     width: 150px;
-    margin: 20px 0;
+    margin-top: 30px;
 }
 
 #go-back-btn span:after {
