Added swipe animation (not finished)

--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -120,7 +120,9 @@ div {
     height: 100%;
     overflow-y: auto;
     width: 75vw;
-    max-width: 750px
+    max-width: 750px;
+    opacity: 0;
+    transform: translateX(250px)
 }
 
 h2 {
