--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ canvas {
 h1 {
     position: absolute;
     margin-bottom: 82vh;
-    height: calc(var(--vh, 1vh) * 82);
+    margin-bottom: calc(var(--vh, 1vh) * 82);
 }
 
 
@@ -227,5 +227,7 @@ textarea {
 @media screen and (max-height: 525px) {
      #main-menu button {
         height: 35px;
+        font-size: smaller;
     }
+
 }
